--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/empty-list.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/empty-list.ejs
@@ -1,1 +1,1 @@
-<td colspan="5">You have't created any tickets yet.<br>Click <a href="#tickets/create">+</a> to create a new one.</td>
+<td colspan="5"><%= __('diamante_front.ticket.template.empty_list', {url: '#tickets/create'}) %></td>
