--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/empty-search.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/empty-search.ejs
@@ -1,1 +1,1 @@
-<td colspan="5">There are no tickets matching your criteria.</td>
+<td colspan="5"><%= __('diamante_front.ticket.template.empty_search') %></td>
