--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/alert.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Common/templates/alert.ejs
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only"><%= __('diamante_front.common.template.close') %></span></button>
       <% if(status == 'error'){ %>
         <div class="status text-danger">
           <i class="fa fa-times"></i>
@@ -25,7 +25,7 @@
       <% }); %>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-default" data-dismiss="modal"><%= __('diamante_front.common.template.close') %></button>
     </div>
   </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
